# LockPilotMac

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: branch-auto-release.yml  ci-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
