[package]
name = "lockpilot"
version = "0.1.0"
description = "macOS timer actions app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["time", "sync", "rt", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
